2-1485664528.log
 --- Init ---
  File "MyBot.py", line 18
 --- Bot used 0 milliseconds ---
-----------------------------------------------------------------------------
 --- Frame #1 ---
    while True:
 --- Bot used 0 milliseconds ---
ERRORED!
Response received (if any):
    while True:
 --- Bot was killed. Below is the rest of its output (if any): ---
        ^
SyntaxError: invalid syntax

 --- End bot output ---